--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ h1{
     text-align: center;
     background-color: #15a1ff;
     border-radius: 2%;
+    border: 1px solid black;
+    margin: 10px 520px 10px 520px;
 }
 body{
     text-justify: auto;
@@ -9,4 +11,17 @@ body{
 #work{
     color: #ff0000;
     text-decoration: underline #ff0000;
+}
+
+#links {
+    border: 1px solid rgb(189, 185, 185);
+    box-shadow: 0 2px 4px #000000;
+    display: flex;
+}
+.link{
+    border: 1px rgb(0, 0, 0);
+    flex-grow: 1;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-decoration: none;
 }
