--- a/page0-style.css
+++ b/page0-style.css
@@ -38,8 +38,9 @@ body{
 /* CHAT-GPT */
 .container {
     display: grid;
-    grid-template-columns: 25% 40% 25%;
+    grid-template-columns: 15% 40% 15%;
     grid-gap: 5%;
+    justify-content: center;
 }
 
 .column {
