--- a/sudoku/sudoku.css
+++ b/sudoku/sudoku.css
@@ -24,6 +24,7 @@
     height: 40px;
     text-align: center;
     font-size: 20px;
+    transition: box-shadow 0.3s;
 }
 
 body{
@@ -44,4 +45,35 @@ body{
 
 button:hover{
     background-color: dimgray;
+}
+
+#modalita {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Assicura che l'elemento sia posizionato sopra gli altri */
+    background-color: white; /* Cambia il colore di sfondo per rendere più evidente */
+    padding: 20px;
+    border: 2px solid black;
+}
+
+/* Stile per i pulsanti */
+#modalita button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #4CAF50; /* Colore di sfondo */
+    color: white; /* Colore del testo */
+    border: none;
+    border-radius: 5px; /* Bordi arrotondati */
+    cursor: pointer;
+    transition: background-color 0.3s; /* Transizione per il cambio di colore */
+}
+
+/* Stile per l'hover dei pulsanti */
+#modalita button:hover {
+    background-color: #327436; /* Cambio di colore al passaggio del mouse */
 }
