--- a/style.css
+++ b/style.css
@@ -128,7 +128,9 @@ footer {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Ombra per dare profondità */
     text-align: center;
     position: relative;
-    display: inline-block;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     max-width: 600px;
     font-size: 1.3em;
